--- a/src/index.scss
+++ b/src/index.scss
@@ -228,4 +228,42 @@ input:is([type="radio"], [type="checkbox"]) {
   width: 15px;
   border: 2px solid;
   border-radius: 50%;
+
+  &.high-priority {
+  border-color: $high-priority-clr;
+
+    &:checked::after {
+      background-color: $high-priority-clr;
+    }
+  }
+
+  &.medium-priority {
+    border-color: $mid-priority-clr;
+
+    &:checked::after {
+      background-color: $mid-priority-clr;
+    }
+  }
+  
+  &.low-priority {
+    border-color: $low-priority-clr;
+
+    &:checked::after { 
+      background-color: $low-priority-clr;
+    }
+  }  
+  }
+
+input[type="radio"]:checked::after {
+  content: "";
+  height: 13px;
+  width: 13px;
+  border-radius: 50%;
+}
+
+input[type="checkbox"]:checked::after {
+  content: "";
+  height: 10px;
+  width: 10px;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 }
