--- a/src/index.scss
+++ b/src/index.scss
@@ -222,12 +222,15 @@ nav {
 
 
 input:is([type="radio"], [type="checkbox"]) {
-  display: grid;
-  place-content: center;
-  height: 15px;
-  width: 15px;
+  $size: 1.1250em;
+
+  height: $size;
+  width: $size;
   border: 2px solid;
   border-radius: 50%;
+
+  display: grid;
+  place-content: center;
 
   &.high-priority {
   border-color: $high-priority-clr;
@@ -254,16 +257,39 @@ input:is([type="radio"], [type="checkbox"]) {
   }  
   }
 
-input[type="radio"]:checked::after {
-  content: "";
-  height: 13px;
-  width: 13px;
-  border-radius: 50%;
+input[type="radio"] {
+  $size: 1em;
+
+  &::after {
+    content: "";
+    height: $size;
+    width: $size;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: transform 120ms ease-out;
+
+  }
+
+  &:checked::after {
+    transform: scale(1);
+  }
 }
 
-input[type="checkbox"]:checked::after {
+
+input[type="checkbox"] {
+  $size: 0.75em;  
+
+  &::after {
   content: "";
-  height: 10px;
-  width: 10px;
+  height: $size;
+  width: $size;
   clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  transform: scale(0);
+  transform-origin: bottom left;
+  transition: transform 120ms ease-out;
+}
+
+&:checked::after {
+  transform: scale(1);
+}
 }
