--- a/src/index.scss
+++ b/src/index.scss
@@ -258,12 +258,12 @@ input:is([type="radio"], [type="checkbox"]) {
   }
 
 input[type="radio"] {
-  $size: 1em;
+  $circle-size: 1em;
 
   &::after {
     content: "";
-    height: $size;
-    width: $size;
+    height: $circle-size;
+    width: $circle-size;
     border-radius: 50%;
     transform: scale(0);
     transition: transform 120ms ease-out;
@@ -277,12 +277,12 @@ input[type="radio"] {
 
 
 input[type="checkbox"] {
-  $size: 0.75em;  
+  $check-mark-size: 0.75em;  
 
   &::after {
   content: "";
-  height: $size;
-  width: $size;
+  height: $check-mark-size;
+  width: $check-mark-size;
   clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
   transform: scale(0);
   transform-origin: bottom left;
