--- a/src/index.scss
+++ b/src/index.scss
@@ -156,7 +156,7 @@ button
       visibility: visible;
       pointer-events: auto;
     }
-    
+
     &[aria-expanded="true"] .nav-wrapper {
       transform: translateX(0);
       transition: all 200ms ease-in;
@@ -231,7 +231,7 @@ button
   overflow-y: auto;
 
   .tasks {
-    @include flex(10px, $vertical: true);
+    @include flex(1em, $vertical: true);
     align-items: center;
   }
 
