--- a/src/index.scss
+++ b/src/index.scss
@@ -135,13 +135,18 @@ button
  .edit-btn,
  .delete-btn,
  .save-btn,
- .cancel-btn {
+ .cancel-btn,
+ .addTask-btn {
 
   svg {
     pointer-events: none;
 
     &.edit-icon {
       transform: translateY(-2px);
+    }
+
+    path {
+      fill: $primary-font-clr;
     }
   }
 
