--- a/src/style.scss
+++ b/src/style.scss
@@ -118,6 +118,10 @@ button
   align-items: center;
   gap: 1em;
   padding-inline: 1em;
+  
+  position: sticky;
+  top:0;
+  z-index: 100;
 
   .toggle-nav-btn {
     svg {
