--- a/src/style.scss
+++ b/src/style.scss
@@ -90,14 +90,13 @@ p, h1, h2, h3, h4, h5, h6 {
 
 body {
   background-color: $clr-accent;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container {
-  height: 100vh;
+  min-height: 100vh;
   font-family: $primary-font;
   color: $primary-font-clr;
-  overflow: auto;
 }
 
 input:not([type="text"]),
