--- a/src/style.scss
+++ b/src/style.scss
@@ -326,7 +326,7 @@ button
   .task,
   .edit-form {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 5px;
     align-self: center;
     background-color: $clr-primary;
